	* improve error message for 'file too short'
	* fix piece-picker stat bug when only selecting some files for download
	* fix bug in async_add_torrent when settings file_priorities
	* fix boost-1.42 support for python bindings
	* fix memory allocation issue (virtual addres space waste) on windows

0.16.11 release

	* fix web seed URL double escape issue
	* fix string encoding issue in alert messages
	* fix SSL authentication issue
	* deprecate std::wstring overloads. long live utf-8
	* improve time-critical pieces feature (streaming)
	* introduce bandwidth exhaustion attack-mitigation in allowed-fast pieces
	* python binding fix issue where torrent_info objects where destructing when their torrents were deleted
	* added missing field to scrape_failed_alert in python bindings
	* GCC 4.8 fix
	* fix proxy failure semantics with regards to anonymous mode
	* fix round-robin seed-unchoke algorithm
	* add bootstrap.sh to generage configure script and run configure
	* fix bug in SOCK5 UDP support
	* fix issue where torrents added by URL would not be started immediately

0.16.10 release

	* fix encryption level handle invalid values
	* add a number of missing functions to the python binding
	* fix typo in Jamfile for building shared libraries
	* prevent tracker exchange for magnet links before metadata is received
	* fix crash in make_magnet_uri when generating links longer than 1024 characters
	* fix hanging issue when closing files on windows (completing a download)
	* fix piece picking edge case that could cause torrents to get stuck at hash failure
	* try unencrypted connections first, and fall back to encryption if it fails (performance improvement)
	* add missing functions to python binding (flush_cache(), remap_files() and orig_files())
	* improve handling of filenames that are invalid on windows
	* support 'implied_port' in DHT announce_peer
	* don't use pool allocator for disk blocks (cache may now return pages to the kernel)

0.16.9 release
